--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "falabot",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Bot crée pour un projet au lycée",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,9 @@
   "author": "Kio",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.16.1",
     "discord": "^0.8.2",
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "libsodium-wrappers": "^0.7.13"
   }
 }
